Fixed layout bug. The flex property basis property, when set to auto will grow the container to fit all the content. However, I didn't want the container to grow. I changed this value to 0 to prevent growth.

--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@ body {
 #root {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 code {
